fixed issues with the logo being too big on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,11 @@ body {
     padding-bottom: 70px;
 }
 .logo-padding {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+.logo {
+    max-width: 40%
 }
 .navbar-padding {
     padding-top: 300px;
